# x2df

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README_CMDLINE  README_CMDLINE.md  README_DEV.md  pipreqs_sorted.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  writemetadata.py
.github/workflows/: tests.yml
src/x2df/: __main__.py  __metadata__.py  examples.py  logfuns.py  x2df.py
src/x2df/dumpers/: __dumper__.py  dumper_parquet.py  dumpers.py
src/x2df/examples/: __example__.py  example_spectral1.py  example_stepresponses1.py  examples.py
src/x2df/fileIOhandlers/: __fileIOhandler__.py  fileIOhandler_csv.py  fileIOhandler_parquet.py  fileIOhandlers.py
tests/: conftest.py  test_debughooks.py  test_examples_dump_parse.py  test_fundamentals.py  test_parseCSVs.py  test_parseExampleData.py  test_parseParquet.py  test_parse_filehandling.py
