[metadata]
name = dfana
version = 0.0.1
author = mb
description = a module for analyzing dataframe contents
license = MIT
license_file = LICENSE
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires ">=3.9"